plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.training.fitflow'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2024.0.1")
}

dependencies {
	// Spring Boot Framework
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// Eureka client
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.44'
	annotationProcessor 'org.projectlombok:lombok:1.18.44'
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	// JSON / Jackson
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
	// Testing
	testImplementation 'org.mockito:mockito-core:5.23.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.23.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off', '-Dnet.bytebuddy.experimental=true'
}
